--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "mongoose": "^4.9.3",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.4"
   },
