--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-autosize": "^1.0.1",
+    "angular2-jwt": "^0.2.0",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.4"
   },
