Add proper server loggin and cleanup a bit

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.3",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "rxjs": "^5.3.0",
