Forced heroku to install dev dependencies

--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
 		"MEAN_SECRET": {
 			"description": "A secret key for verifying the integrity of signed cookies.",
 			"generator": "secret"
-		}
+		},
+		"NPM_CONFIG_PRODUCTION": false,
 	},
 	"addons": [
 		{
