--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
 			"description": "A secret key for verifying the integrity of signed cookies.",
 			"generator": "secret"
 		},
-		"NPM_CONFIG_PRODUCTION": false,
+		"NPM_CONFIG_PRODUCTION": false
 	},
 	"addons": [
 		{
