--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
 			"description": "A secret key for verifying the integrity of signed cookies.",
 			"generator": "secret"
 		},
-		"NPM_CONFIG_PRODUCTION": "false"
+		"NPM_CONFIG_PRODUCTION": {
+			"description": "Leave this false, allows app build to properly occur.",
+			"value": "false"
+		}
 	},
 	"addons": [
 		{
